#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ(2.57)
AC_INIT(cyfer, 0.6.1, senko@senko.net)
AC_CONFIG_SRCDIR([examples/hash.c])
AC_CONFIG_HEADER([include/config.h])

# Checks for programs.
AC_PROG_CC
AC_PROG_CPP
AC_PROG_INSTALL
AC_PROG_LN_S
AC_PROG_MAKE_SET
AC_PROG_RANLIB
AC_PROG_LIBTOOL

# Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS([inttypes.h stdlib.h string.h unistd.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_HEADER_STDBOOL
AC_C_CONST
AC_C_INLINE
AC_TYPE_SIZE_T

# Checks for library functions.
AC_FUNC_MALLOC
AC_FUNC_MEMCMP
AC_CHECK_FUNCS([memmove memset])

AC_MSG_CHECKING([whether to create 64bit library])
AC_ARG_ENABLE(64bit, AC_HELP_STRING([--enable-64bit], [create 64bit library (default is NO)]),
		   [ac_cv_enable_64bit=$enableval], [ac_cv_enable_64bit=no])

MPFLAGS=""

if test $ac_cv_enable_64bit = yes; then
	AC_MSG_RESULT([yes])
	CFLAGS="$CFLAGS -m64"
else
	AC_MSG_RESULT([no])
fi

AC_C_BIGENDIAN(, AC_SUBST(LENDIAN, -DCYFER_LITTLE_ENDIAN),
		AC_MSG_WARN(cannot determine system endianess, assuming big endian))

AC_CHECK_LIB([gmp], [__gmpz_export],,AC_MSG_ERROR(GNU MP library with required features (gmp 4.1) not found))

# Write results

AC_CONFIG_FILES([Makefile
                 examples/Makefile
                 test/Makefile
                 lib/Makefile
                 lib/asym/Makefile
                 lib/hash/Makefile
                 lib/sym/Makefile])

AC_OUTPUT

